add lecture code

--- a/index.html
+++ b/index.html
@@ -16,10 +16,41 @@
     </div>
 
     <div class="container">
-      <!-- Your code here -->
+      <button>Click me!</button>
 
-      <p class="my-5 text-center">Open the console 🤓</p>
+      <!-- Your code here -->
+      <h1>Choose a pet:</h1>
+      <button type="button" class="btn btn-light">Select all</button>
+      <form>
+        <div class="form-group">
+          <input type="checkbox" id="cat" class="form-check-input" name="cat" value="Cat">
+          <label for="cat" class="form-check-label"> I have a cat</label><br>
+          <input type="checkbox" id="dog" class="form-check-input" name="dog" value="Dog">
+          <label for="dog" class="form-check-label"> I have a dog</label><br>
+          <input type="checkbox" id="rabbit" class="form-check-input" name="rabbit" value="Rabbit">
+          <label for="rabbit" class="form-check-label"> I have a rabbit</label><br>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <form>
+      <a id="link" href="http://google.com">Click me!</a>
+      <img src="https://kitt.lewagon.com/placeholder/users/monsieurpaillard" id="romain" height="200" alt="Romain Paillard" />
+      <img src="https://kitt.lewagon.com/placeholder/users/Papillard" id="boris" height="200" alt="Boris Paillard" />
+      <ul id="players">
+        <li id="messi" data-world-best="7" data-team="Barcelona">Messi</li>
+        <li>Ronaldinho</li>
+        <li>Mbappe</li>
+        <li>Ronaldo</li>
+      </ul>
+
+      <ul id="abba">
+        <li class="abba" data-instrument="vocals">Agnetha</li>
+        <li class="abba" data-instrument="guitars">Bjorn</li>
+        <li class="abba" data-instrument="keyboards">Benny</li>
+        <li class="abba" data-instrument="vocals">Anni-Frid</li>
+      </ul>
+
     </div>
+
 
     <!-- Bootstrap JavaScript library -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
